// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnquiryDetail renders as expected 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About your enquiry"
    sectionPosition="Section 1 of 2"
  />
  <div
    className="wmrards-m-t-xl null"
  >
    <Question
      text="What is your lost property enquiry about?"
    />
    <FieldError
      text={null}
    />
    <TextArea
      fieldName="enquiryDetail"
      validation={[Function]}
    />
  </div>
</div>
`;

exports[`EnquiryDetail renders with an error 1`] = `
<div
  className="wmrards-fe-group wmrards-m-t-20"
>
  <ProgressIndicator
    sectionName="About your enquiry"
    sectionPosition="Section 1 of 2"
  />
  <div
    className="wmrards-m-t-xl wmrards-fe-group--error"
  >
    <Question
      text="What is your lost property enquiry about?"
    />
    <FieldError
      text="Required"
    />
    <TextArea
      fieldName="enquiryDetail"
      validation={[Function]}
    />
  </div>
</div>
`;
